[project]
name = "ubunconla"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "pypdf>=6.1.1",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.1",
    "txtai>=9.0.1",
]
